--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,17 @@
 {{ partial "header.html" . }}
 {{ partial "header-content" . }}
 
-<section>
-  <h1>CodeBlock Inc</h1>
+<section class="section-landing">
+  <div class="content">
+    <img src="/img/short-cb.png" class="logo">
+    <h1>CodeBlock Inc</h1>
+    <p class="assure">Fundamental, Software Artisans</p>
+    <p>We take pride in our work to deliver the best software experience.</p>
+
+    <a class="btn btn-1 btn-1f btn-action" href="mailto:contact@codeblock.io">
+      Contact Us
+    </a>
+  </div>
 </section>
 
 {{ partial "footer-content.html" . }}
