--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -42,7 +42,8 @@ $bp-xlarge-2  : 67em;
 /************************************
 Site Constants
 ************************************/
-$base-color    : #2980b9;
+$base-color    : #374C9D;
+$hover-color   : #C7232D;
 $navbar-height : 50px;
 
 /************************************
@@ -143,9 +144,9 @@ section {
   padding-top: $navbar-height;
   width: 100%;
   height: 100vh;
-  background: 
+  background:
     linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),
-    url("/img/hero-back.jpg");
+    url("/img/hero-bw.jpg");
   background-size: cover;
   background-position: center;
   display: table;
@@ -159,6 +160,10 @@ section {
 
     h1 {
       font-size: 1.5em;
+    }
+
+    .logo {
+      width: 200px;
     }
 
     .assure {
@@ -307,9 +312,9 @@ section {
 
 .btn-1f:hover,
 .btn-1f:active {
-  color: $base-color;
-  border: 3px solid #FFF;
-  background: #FFF;
+  color: #FFF;
+  border: 3px solid $hover-color;
+  background: $hover-color;
 }
 
 .btn-action {
@@ -362,13 +367,13 @@ footer {
 
   .footer-nav li a:active,
   .footer-nav li a:hover {
-    background: #FFF;
+    background: $hover-color;
     color: $base-color;
   }
 
-  .ion-social-facebook:hover, 
+  .ion-social-facebook:hover,
   .ion-social-twitter:hover {
-    background: #FFF;
+    background: $hover-color;
     color: $base-color;
   }
 }
