--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,8 +5,8 @@
   <div class="content">
     <img src="/img/short-cb.png" class="logo">
     <h1>CodeBlock Inc</h1>
-    <p class="assure">Fundamental, Software Artisans</p>
-    <p>We take pride in our work to deliver the best software experience.</p>
+    <p class="assure">We scale your People, Tools, and Processes.</p>
+    <p>Achieve organizational efficiency and transparency with DevOps.</p>
 
     <a class="btn btn-1 btn-1f btn-action" href="mailto:contact@codeblock.io">
       Contact Us
