--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   <div class="content">
     <img src="/img/short-cb.png" class="logo">
     <h1>CodeBlock Inc</h1>
-    <p class="assure">We scale your People, Tools, and Processes.</p>
+    <p class="assure">Scale Your People, Tools, and Processes</p>
     <p>Achieve organizational efficiency and transparency with DevOps.</p>
 
     <a class="btn btn-1 btn-1f btn-action" href="mailto:contact@codeblock.io">
